[package]
name = "tiny-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
chronoutil = "0.2.6"
diesel = { features = ["postgres", "chrono"], version = "2.1.4" }
openssl = "0.10.64"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
log = "0.4.21"
dotenv = "0.15.0"
redis = "0.24.0"
rand = "0.9.0-alpha.0"
